--- a/baslangic.html
+++ b/baslangic.html
@@ -1,7 +1,7 @@
 ---
-title: "Hızlı Başlangıç"
+title: "Quick Tutorial"
 layout: splash
-permalink: /baslangic/
+permalink: /tutorial/
 header:
   overlay_color: "#000"
   overlay_filter: "0.5"
@@ -9,32 +9,32 @@ header:
   cta_label: 
   cta_url: 
   caption: 
-excerpt: "Bu rehberi inceleyerek daha rahat gezinti sağlayabilirsiniz."
+excerpt: "You can make navigation easier by reviewing this guide."
 intro: 
   - excerpt: 'Ƹ̵̡Ӝ̵̨̄Ʒ'
 feature_row2:
   - image_path: 
     alt: "placeholder image 2"
     title: "İletişim"
-    excerpt: 'Sol kısımdan sosyal medya hesaplarımızı takip edebilirsiniz. Aynı zamanda iş görüşmeleri için ferhat@ekofi.science adresini kullanabilirsiniz.'
+    excerpt: 'You can follow our social media accounts on the left. At the same time you can use (like business) ferhat@ekofi.science.'
     url: 
-    btn_label: "Pekala!"
+    btn_label: "Well done!"
     btn_class: "btn--primary"
 feature_row3:
   - image_path: 
     alt: "placeholder image 2"
-    title: "Belki sevebilirsiniz: Önerilenler"
-    excerpt: 'Alt tarafta önerilen makaleler kısmını göreceksiniz. Tıklayarak herhangi birine gidebilirsiniz.'
+    title: "Maybe you can like: Suggestions"
+    excerpt: 'At the bottom you will see the recommended part of the article. You can go to any of them by clicking.'
     url: 
     btn_label: "Tamam"
     btn_class: "btn--primary"
 feature_row4:
   - image_path: 
     alt: "placeholder image 2"
-    title: "Bu kadar!"
-    excerpt: 'Antrenmanı tamamladınız. Ana sayfaya dönebilirsiniz.'
+    title: "Thats it!"
+    excerpt: 'You can go back to main menu.'
     url: 
-    btn_label: "Bitti"
+    btn_label: "Done"
     btn_class: "btn--primary"
 ---
 
