--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@ author_profile: true
 	<!-- Favicon-->
 	<link rel="shortcut icon" href="img/fav.png">
 	<!-- Author Meta -->
-	<meta name="author" content="Ekofi Research">
+	<meta name="author" content="Ekofi Science">
 	<!-- Meta Description -->
-	<meta name="description" content="Ekofi Bilim, pek çok bilim dalında araştırmalar yapar ve araştırma yapılan konulara kreatif fikirler üreterek yeni buluşlara imza atar.">
+	<meta name="description" content="Ekofi Science conducts research in many disciplines and creates new inventions by producing creative ideas for the research topics.">
 	<!-- Meta Keyword -->
-	<meta name="keywords" content="Ekofi, Ekofi Bilim, Ekofi Science, Ekofi Research, Bilim, Makale, Yapay Zeka, AI">
+	<meta name="keywords" content="Ekofi, Ekofi Bilim, Ekofi Science, Ekofi Research, Science, Makale, Yapay Zeka, AI">
 	<!-- meta character set -->
 	<meta charset="UTF-8">
 	<!-- Site Title -->
