--- a/baslangic.html
+++ b/baslangic.html
@@ -15,7 +15,7 @@ intro:
 feature_row2:
   - image_path: 
     alt: "placeholder image 2"
-    title: "İletişim"
+    title: "Contact"
     excerpt: 'You can follow our social media accounts on the left. At the same time you can use (like business) ferhat@ekofi.science.'
     url: 
     btn_label: "Well done!"
