--- a/404.html
+++ b/404.html
@@ -2,5 +2,5 @@
 permalink: /404.html
 ---
 <br>
-<p align="center">404 sayfa bulunamadı<br></p>
-<p align="center">korsanlar bu ıssız ve yağmurlu gecede savaşıyor.</p>
+<p align="center">404 not found<br></p>
+<p align="center">pirates are fighting in this desolate and rainy night.</p>
