--- a/comment-policy.html
+++ b/comment-policy.html
@@ -1,5 +1,7 @@
 <b><h3>Ekofi Research Comment Policy</h3></b><br>
-<b>Etiquette</b> - "Be polite and stay on topic” "No self-promotion" "Don't say bad words" "Don't discuss badly with anyone" "Don't threaten anyone"<br>
+<b>Etiquette</b> - "Be polite and stay on topic” "No self-promotion" "Don't say bad words" "Don't discuss badly with anyone"<br>
 <b>Expectations</b> - "Your comment will be removed for reason advertising, spam, and humiliation"<br>
 <b>Privacy</b> - “Don’t post personal information"<br>
 <b>Discrimination</b> - "Do not discriminate"<br>
+<b>Disturbing the peace</b> - "Don't do harassing, stalking, or threatening of individuals" "Don't do hate speech (sexist, racist, homophobic, etc.)" "Don't do spamming, hijacking, or disrupting"<br>
+<b>Encouraging</b> - "Don't do encouraging others to break any of these rules"<br>
