--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@ author_profile: true
 	<!-- Author Meta -->
 	<meta name="author" content="Ekofi Science">
 	<!-- Meta Description -->
-	<meta name="description" content="Ekofi Science conducts research in many disciplines and creates new inventions by producing creative ideas for the research topics.">
+	<meta name="description" content="Ekofi Research features science news and articles on global warming, space, biology, physics, chemistry, nanotechnology, dinosaurs, evolution, medicine">
 	<!-- Meta Keyword -->
-	<meta name="keywords" content="Ekofi, Ekofi Bilim, Ekofi Science, Ekofi Research, Science, Makale, Yapay Zeka, AI">
+	<meta name="keywords" content="Ekofi, Ekofi Research, Ekofi Science, Ekofi Bilim, science, global warming, space, biology, physics, Makale, Yapay Zeka, AI">
 	<!-- meta character set -->
 	<meta charset="UTF-8">
 	<!-- Site Title -->
