--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@ author_profile: true
 ---
 	<!-- Favicon-->
 	<link rel="shortcut icon" href="img/fav.png">
-	<!-- Author Meta -->
-	<meta name="author" content="Ekofi Science">
 	<!-- Meta Description -->
-	<meta name="description" content="Ekofi Research features science news and articles on global warming, space, biology, physics, chemistry, nanotechnology, dinosaurs, evolution, medicine">
+	<meta name="description" content="Browse the latest scientific news and learn about the most interesting and wonderful content.">
 	<!-- Meta Keyword -->
 	<meta name="keywords" content="Ekofi, Ekofi Research, Ekofi Science, Ekofi Bilim, science, global warming, space, biology, physics, Makale, Yapay Zeka, AI">
 	<!-- meta character set -->
